--- a/Lab07/2137_Lab07_report.tex
+++ b/Lab07/2137_Lab07_report.tex
@@ -81,6 +81,7 @@ There is no question in lab7.\\
 \section*{Results}
 
 	Firgure 1 is the simulation waveform and ERT of the Add3.\\
+	
 	\begin{figure}[ht]\centering
 		\begin{tabular}{l|rrrr|rrrr|rrrr}
 			Time (ns): & 0 & 10 & 20 & 30 & 40 & 50 & 60 & 110 & 120 & 130 & 140 & 150 \\
@@ -97,70 +98,88 @@ There is no question in lab7.\\
 	\end{figure}
 
 
-Firgure 2 is the simulation waveform and ERT of the 6-bit BCD.\\
-\begin{figure}[ht]\centering
-	\begin{tabular}{l|rrr|rrrr}
-		Time (ns): & 0 & 10 & 20 & 600 & 610 & 620 & 630 \\
-		\midrule
-		Bin & 000000 & 000001 & 000010 & 111100 & 111101 & 111110 & 111111 \\
-		\midrule
-		ones & 0000 & 0001 & 0010 & 0000 & 0001 & 0010 & 0011 \\
-		tens & 0000 & 0000 & 0000 & 0110 & 0110 & 0110 & 0110 \\
-		\bottomrule
-	\end{tabular}\medskip
+	Firgure 2 is the simulation waveform and ERT of the 6-bit BCD.\\
+	.\\
+	\begin{figure}[ht]\centering
+		\begin{tabular}{l|rrr|rrrr}
+			Time (ns): & 0 & 10 & 20 & 600 & 610 & 620 & 630 \\
+			\midrule
+			Bin & 000000 & 000001 & 000010 & 111100 & 111101 & 111110 & 111111 \\
+			\midrule
+			ones & 0000 & 0001 & 0010 & 0000 & 0001 & 0010 & 0011 \\
+			tens & 0000 & 0000 & 0000 & 0110 & 0110 & 0110 & 0110 \\
+			\bottomrule
+		\end{tabular}\medskip
+		
+		\includegraphics[width=1\textwidth]{bcd6_simulate_beginning}
+		\includegraphics[width=1\textwidth]{bcd6_simulate_end}
+		\caption{the simulation waveform and ERT of the 6-bit BCD}
+		\label{fig:bcd6_simulate}
+	\end{figure}
 	
-	\includegraphics[width=1\textwidth]{bcd6_simulate_beginning}
-	\includegraphics[width=1\textwidth]{bcd6_simulate_end}
-	\caption{the simulation waveform and ERT of the 6-bit BCD}
-	\label{fig:bcd6_simulate}
-\end{figure}
-
-
-Firgure 3 is the simulation waveform and ERT of the 11-bit BCD.\\
-\begin{figure}[ht]\centering
-	\begin{tabular}{l|rrrr|rrrr|rr}
-		Time (ns): & 0 & 10 & 20 & 30 & 40 & 50 & 20430 & 20440 & 20450 & 20460 \\
-		\midrule
-		Bin & 000 & 001 & 002 & 003 & 004 & 005 & 7fb & 7fc & 7fd & 7fe \\
-		\midrule
-		ones & 0000 & 0001 & 0010 & 0011 & 0100 & 0101 & 0011 & 0100 & 0101 & 0110 \\
-		tens & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0100 & 0100 & 0100 & 0100 \\
-		hund & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 \\
-		thou & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0010 & 0010 & 0010 & 0010 \\
-		\bottomrule
-	\end{tabular}\medskip
 	
-	\includegraphics[width=1\textwidth]{bcd11_simulate_beginning}
-	\includegraphics[width=1\textwidth]{bcd11_simulate_end}
-	\caption{the simulation waveform and ERT of the 11-bit BCD}
-	\label{fig:bcd11_simulate}
-\end{figure}
+	Firgure 3 is the simulation waveform and ERT of the 11-bit BCD.\\
+	.\\
+	\begin{figure}[ht]\centering
+		\begin{tabular}{l|rrrr|rrrr|rr}
+			Time (ns): & 0 & 10 & 20 & 30 & 40 & 50 & 20430 & 20440 & 20450 & 20460 \\
+			\midrule
+			Bin & 000 & 001 & 002 & 003 & 004 & 005 & 7fb & 7fc & 7fd & 7fe \\
+			\midrule
+			ones & 0000 & 0001 & 0010 & 0011 & 0100 & 0101 & 0011 & 0100 & 0101 & 0110 \\
+			tens & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0100 & 0100 & 0100 & 0100 \\
+			hund & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 \\
+			thou & 0000 & 0000 & 0000 & 0000 & 0000 & 0000 & 0010 & 0010 & 0010 & 0010 \\
+			\bottomrule
+		\end{tabular}\medskip
+		
+		\includegraphics[width=1\textwidth]{bcd11_simulate_beginning}
+		\includegraphics[width=1\textwidth]{bcd11_simulate_end}
+		\caption{the simulation waveform and ERT of the 11-bit BCD}
+		\label{fig:bcd11_simulate}
+	\end{figure}
+	
+	This is the picture of my board which showing a value on the first digit\\
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{board1}
+	\end{center}
+	
+	This is the picture of my board which showing a value on the second digit\\	
+	\begin{center}
+		\includegraphics[width=0.75\textwidth]{board2}
+	\end{center}
+	
+	This is the picture of my schematic/circuit diagram for the 11 bit converter\\
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{bcd11bit_schematic}
+	\end{center}
+
 
 
 \section*{Code}
-
-\subsection*{File Inclusion}
-\Verilog[caption=Add3 Verilog code,label=code:file_ex]{add3.sv}
-
-\subsection*{File Inclusion}
-\Verilog[caption=Add3 Test Benches Verilog code,label=code:file_ex]{add3_test.sv}
-
-
-\subsection*{File Inclusion}
-\Verilog[caption=6-bit BCD Verilog code,label=code:file_ex]{bcd6.sv}
-
-\subsection*{File Inclusion}
-\Verilog[caption=6-bit BCD Test Benches Verilog code,label=code:file_ex]{bcd6_test.sv}
-
-
-\subsection*{File Inclusion}
-\Verilog[caption=11-bit BCD Verilog code,label=code:file_ex]{bcd11.sv}
-
-\subsection*{File Inclusion}
-\Verilog[caption=11-bit BCD Test Benches Verilog code,label=code:file_ex]{bcd11_test.sv}
-
-\subsection*{File Inclusion}
-\Verilog[caption=sseg1 BCD Verilog code,label=code:file_ex]{sseg1_BCD.sv}
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=Add3 Verilog code,label=code:file_ex]{add3.sv}
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=Add3 Test Benches Verilog code,label=code:file_ex]{add3_test.sv}
+	
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=6-bit BCD Verilog code,label=code:file_ex]{bcd6.sv}
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=6-bit BCD Test Benches Verilog code,label=code:file_ex]{bcd6_test.sv}
+	
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=11-bit BCD Verilog code,label=code:file_ex]{bcd11.sv}
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=11-bit BCD Test Benches Verilog code,label=code:file_ex]{bcd11_test.sv}
+	
+	\subsection*{File Inclusion}
+	\Verilog[caption=sseg1 BCD Verilog code,label=code:file_ex]{sseg1_BCD.sv}
 
 
 
