--- a/Lab09/2137_Lab09_report.tex
+++ b/Lab09/2137_Lab09_report.tex
@@ -68,12 +68,12 @@
 
 \section*{Summary}
 
-In this lab, we will take the next step by creating an Arithmetic Logic Unit (ALU) capable of a few operations. In order to do mathematical operations with the ALU, we need two numbers. One of these will come from the switches. For the other, we will use a register to store a number.
+In this lab, we will take the next step by creating an Arithmetic Logic Unit (ALU) capable of a few operations. In order to do mathematical operations with the ALU, we need two numbers. One of these will come from the switches. For the other, we will use a register to store a number.\\
 
 
 \section*{Q\&A}
 
-There is no question in the lab 09 assignment.
+There is no question in the lab 09 assignment.\\
 
 
 \section*{Results}
